# poc-selector

./: .gitignore  README.md
benchmark/c/: Makefile  poc_bench.c
benchmark/rust/: Cargo.toml
benchmark/rust/src/: bench.rs  calibrate.rs  main.rs  stats.rs  system.rs  ui.rs
