[package]
name = "poc-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[profile.release-tiny]
inherits = "release"
lto = "thin"
strip = true
incremental = true
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = false
incremental = true
